--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,7 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+html{
+    width: 100vw;
+}
